# fonti-registry

./: .gitignore  .gitmodules  fonti_registry.json.br  last_commit.txt  pyproject.toml  registry.py
.github/workflows/: update-registry.yml
registry/: fonti_registry.json
