[project]
name = "fonti-registry"
version = "0.1.0"
description = "An automated registry for fonti"
readme = "README.md"
requires-python = ">=3.14"
authors = [{ name = "Sacha Crispin", email = "hello@glypse.design" }]
dependencies = [
    "httpx>=0.28.0",
    "rich>=14.0.0",
    "fonttools>=4.60.1",
    "beautifulsoup4>=4.14.2",
    "brotli>=1.2.0",
]

[dependency-groups]
dev = ["pytest>=6.0", "black>=22.0", "isort>=5.0", "ruff>=0.1.0"]

[project.scripts]
fonti = "fonti.cli:app"

[tool.uv]
package = true

[tool.black]
target-version = ['py313']

[tool.isort]
profile = "black"
multi_line_output = 3

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = [
    "E",   # pycodestyle errors
    "W",   # pycodestyle warnings
    "F",   # pyflakes
    "I",   # isort
    "B",   # flake8-bugbear
    "C4",  # flake8-comprehensions
    "ARG", # unused arguments
    "TC",  # type checker
]
